--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,7 @@
 {
 	"name": "nella/diagnostics",
 	"type": "nette-addon",
-	"description": "Remote application log and access log  for Nette Framework",
-	"keywords": ["debug", "nette", "diagnostics", "nella", "addon", "log", "remote"],
-	"homepage": "http://nellafw.org",
+	"description": "THE DEVELOPMENT OF NELLA DIAGNOSTICS HAS BEEN ABANDONED",
 	"license": ["BSD-3-Clause", "GPL-2.0+"],
 	"authors": [
 		{
@@ -17,18 +15,13 @@
 			"homepage": "http://nella-project.org"
 		}
 	],
-	"support":{
-		"issues":"https://github.com/nella/framework/issues",
-		"source":"https://github.com/nella/framework/tree/master/Nella/Diagnostics"
-    },
 	"autoload": {
-		"psr-0": {
-			"Nella\\Diagnostics": "./"
-		}
+		"files": ["index.php"]
 	},
-	"target-dir": "Nella/Diagnostics",
 	"require": {
-		"php": ">=5.3.2",
-		"nette/nette": "2.0.*"
+		"php": ">=5.3.2"
+	},
+	"suggest": {
+		"vrtak-cz/newrelic-nette": "Please migrate from nella/diagnostics to vrtak-cz/newrelic-nette"
 	}
 }
